# cheater-ai

./: README.md  app.py  pyproject.toml
project/: project.rar  pyproject.toml
project/rag_store/: chunks.json  index.faiss  meta.json
project/templates/: index.html
static/: style.css
templates/: index.html
