[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "numpy>=2.5.1",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "sentence-transformers>=5.6.0",
    "uuid>=1.30",
    "uvicorn>=0.51.0",
]
